--- a/code/pages/category.html
+++ b/code/pages/category.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body>
+<body class="loadding">
   <!-- 头部 -->
   <header>
     <div class="mui-input-row mui-search">
@@ -28,6 +28,9 @@
     </ul>
     </div>
     <div class="category-right">
+        <div class="rigth-content">
+
+        </div>
     </div>
   </div>
 
@@ -65,6 +68,7 @@
 
 <!-- 二级渲染模板 -->
 <script type="text/template" id="categoryRightTemp">
+
    <!-- 二级渲染 -->
        {{each res val index}}
       <div class="rende-second">
@@ -82,7 +86,7 @@
               </a>
             </li>
             {{/each}}
-      </div>
+       </div>
       {{/each}}
 
   
