分类页面实现本地缓存数据

--- a/code/index.html
+++ b/code/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./css/index.css">
 
 </head>
-<body class="loadding">
+<body>
   <!-- 头部 -->
   <header>
       <div class="mui-input-row mui-search">
@@ -42,7 +42,7 @@
 
  <!-- 底部 -->
  <footer>
-   <a href="./index.html">
+   <a href="./index.html" class="mui-text-primary">
      <div class="fa fa-home"></div>
      <div>首页</div>
    </a>
