--- a/code/pages/category.html
+++ b/code/pages/category.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body class="loadding">
+<body>
   <!-- 头部 -->
   <header>
     <div class="mui-input-row mui-search">
@@ -40,7 +40,7 @@
       <div class="fa fa-home"></div>
       <div>首页</div>
     </a>
-    <a href="./pages/category.html">
+    <a href="./category.html" class="mui-text-primary">
       <div class="fa fa-list-ul"></div>
       <div>分类</div>
     </a>
