商品详情页的初次构建

--- a/code/index.html
+++ b/code/index.html
@@ -113,7 +113,7 @@
               <!-- 商品图片 -->
               <img src="{{val2.goods_small_logo}}" alt="">
               <!-- 商品描述 -->
-              <div class="commodity-describe">
+              <div class="commodity-describe mui-ellipsis-2">
                 {{val2.goods_name}}
               </div>
               <!-- 商品价格 -->
