商品详情页的动态渲染与模板变量

--- a/code/index.html
+++ b/code/index.html
@@ -46,7 +46,7 @@
      <div class="fa fa-home"></div>
      <div>首页</div>
    </a>
-    <a href="/pages/category.html">
+    <a href="./pages/category.html">
       <div class="fa fa-list-ul"></div>
       <div>分类</div>
     </a>
