--- a/code/pages/good_list.html
+++ b/code/pages/good_list.html
@@ -56,7 +56,7 @@
       <div class="fa fa-list-ul"></div>
       <div>分类</div>
     </a>
-    <a href="javascript:;">
+    <a href="./cart.html">
       <div class="fa fa-shopping-cart"></div>
       <div>购物车</div>
     </a>
