项目终完成

--- a/code/index.html
+++ b/code/index.html
@@ -54,7 +54,7 @@
       <div class="fa fa-shopping-cart"></div>
       <div>购物车</div>
     </a>
-    <a href="javascript:;">
+    <a href="./pages/me.html">
       <div class="fa fa-user-circle-o"></div>
       <div>我的</div>
     </a>
