--- a/code/pages/login.html
+++ b/code/pages/login.html
@@ -56,11 +56,11 @@
       <div class="fa fa-list-ul"></div>
       <div>分类</div>
     </a>
-    <a href="javascript:;">
+    <a href="./cart.html">
       <div class="fa fa-shopping-cart"></div>
       <div>购物车</div>
     </a>
-    <a href="javascript:;">
+    <a href="./me.html">
       <div class="fa fa-user-circle-o"></div>
       <div>我的</div>
     </a>
