--- a/code/pages/category.html
+++ b/code/pages/category.html
@@ -48,7 +48,7 @@
       <div class="fa fa-shopping-cart"></div>
       <div>购物车</div>
     </a>
-    <a href="javascript:;">
+    <a href="./me.html">
       <div class="fa fa-user-circle-o"></div>
       <div>我的</div>
     </a>
